AB_AI/error.txt
D:\Parashari website new\AB_AI\assets\js\level-data.js:644
              <div class="cvd-hero-save"><i class="fas fa-check" style="color: #6B8E23;"></i> Save ${Math.round((parseInt(prices.old.replace(/[^0-9]/g, \'\')) - parseInt((prices.save || prices.newPrice).replace(/[^0-9]/g, \'\')))/parseInt(prices.old.replace(/[^0-9]/g, \'\')) * 100)}% Today &nbsp;&middot;&nbsp; Duration: ${levelConfig.duration}</div>
                                                                                                                                                        ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1620:18)
    at Module._compile (node:internal/modules/cjs/loader:1662:20)
    at Object..js (node:internal/modules/cjs/loader:1820:10)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.18.0
